Add basic render function
Wrote some html and css to visualize the game. Then added a render
function that will display avatar on the clicked area.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <div class="container">
+      <div class="o"></div>
+      <div class="x"></div>
+    </div>
+
+    <div class="play">
+      <div class="div-1 tiles"></div>
+      <div class="div-2 tiles"></div>
+      <div class="div-3 tiles"></div>
+      <div class="div-4 tiles"></div>
+      <div class="div-5 tiles"></div>
+      <div class="div-6 tiles"></div>
+      <div class="div-7 tiles"></div>
+      <div class="div-8 tiles"></div>
+      <div class="div-9 tiles"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
