design feature to visual see avatar playing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
+    <header class="head">
+      <p class="choose">Choose X or O</p>
+      <div class="btns">
+        <button class="btn-x btn-active">X</button>
+        <button class="btn-o">O</button>
+      </div>
+    </header>
     <div class="container">
       <div class="o"></div>
       <div class="x"></div>
