Add html and style restart button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       <div class="div-8 tiles"></div>
       <div class="div-9 tiles"></div>
     </div>
+
+    <div class="reset">
+      <button class="restart">Restart</button>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
