Design and add some functionality to winning message

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       <button class="restart">Restart</button>
     </div>
 
+    <div class="overlay hidden"></div>
+
+    <div class="win-msg hidden">
+      <p class="msg hidden"></p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
